更新 README.md 和 index.html，修正描述并添加免责声明信息

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>仅支持 OneBot 的插件列表</title>
+  <title>上架插件市场并直接依赖nonebot-adapter-onebot的nonebot插件列表</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -48,7 +48,7 @@
 </head>
 <body>
   <header>
-    上架插件市场并直接依赖nonebot-adapter-onebot的nonebot插件列表
+    上架插件市场并直接依赖nonebot-adapter-onebot的nonebot插件列表,数据并非实时更新,如与插件实际情况不符请以插件实际为准
   </header>
   <main>
     <div class="timestamp">
